- set fkceditor fileuploader to active - fix collapsing site on small screens (<900px width)

--- a/design/jku-lan-simple/style.css
+++ b/design/jku-lan-simple/style.css
@@ -32,6 +32,7 @@ html, body {
 .wrapper {
   position: relative;
   width: 100%;
+  min-width: 900px;
   max-width: 1400px;
   margin: 0 auto;
 }
